scaper helper & integration

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-relative-import": "^1.0.3",
     "bluebird": "^3.5.2",
     "body-parser": "~1.17.1",
+    "cheerio": "^1.0.0-rc.3",
     "console-error": "0.0.4",
     "console-info": "0.0.5",
     "console-warn": "0.0.4",
@@ -27,6 +28,7 @@
     "file-type": "^6.1.0",
     "hat": "0.0.3",
     "htmltidy2": "^0.2.1",
+    "image-size": "^0.7.4",
     "image-type": "^3.0.0",
     "mongoose": "^5.0.9",
     "morgan": "~1.8.1",
