--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "salted-md5": "^4.0.2",
     "sanitize-html": "^1.14.1",
     "sharp": "^0.22.1",
+    "svg-captcha": "^1.4.0",
     "xregexp": "^4.2.4"
   },
   "devDependencies": {
