--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "sharp": "^0.22.1",
     "sitemap-generator": "^8.4.0",
     "svg-captcha": "^1.4.0",
-    "xregexp": "^4.2.4"
+    "xregexp": "^4.2.4",
+    "youtube-info": "^1.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
