--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express",
+  "name": "katcafe-backend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,32 +11,20 @@
     "show_coverage": "node src/tests/browser/show-coverage.test.js"
   },
   "dependencies": {
-    "@r/api-client": "^3.37.0",
-    "axios": "^0.18.0",
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-relative-import": "^1.0.3",
     "bluebird": "^3.5.2",
     "body-parser": "~1.17.1",
     "cheerio": "^1.0.0-rc.3",
-    "console-error": "0.0.4",
-    "console-info": "0.0.5",
-    "console-warn": "0.0.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "file-type": "^6.1.0",
-    "hat": "0.0.3",
-    "htmltidy2": "^0.2.1",
     "image-size": "^0.7.4",
-    "image-type": "^3.0.0",
-    "mongoose": "^5.0.9",
-    "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "run-middleware": "^0.6.6",
     "salted-md5": "^4.0.2",
     "sanitize-html": "^1.20.1",
     "sharp": "^0.22.1",
@@ -60,7 +48,7 @@
     "opn": "^5.2.0",
     "web-push": "^3.3.3",
     "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-bundle-analyzer": "^3.5.2",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.6.0"
   }
