--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sanitize-html": "^1.20.1",
     "sharp": "^0.22.1",
     "sitemap-generator": "^8.4.0",
+    "socket.io": "^2.3.0",
     "svg-captcha": "^1.4.0",
     "xregexp": "^4.2.4",
     "youtube-info": "^1.3.2"
