--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "generate-vapid-keys": "node src/generate-vapid-keys.js",
     "build": "webpack --config build_webpack/webpack.terminal.config.js ",
     "start": "npm run build && node dist_bundle/terminal-bundle.js",
     "test": "webpack --config build_webpack/tests/webpack.terminal.test.config.js && mocha --exit --timeout 10000 dist_bundle/terminal-mocha-bundle.js --reporter mochawesome && npma run show_mocha_report",
@@ -27,6 +28,7 @@
     "request-promise": "^4.2.2",
     "salted-md5": "^4.0.2",
     "sanitize-html": "^1.20.1",
+    "secp256k1": "^3.7.1",
     "sharp": "^0.22.1",
     "sitemap-generator": "^8.4.0",
     "socket.io": "^2.3.0",
@@ -47,7 +49,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "mochawesome": "^3.0.2",
     "opn": "^5.2.0",
-    "web-push": "^3.3.3",
+    "web-push": "^3.4.0",
     "webpack": "^2.5.1",
     "webpack-bundle-analyzer": "^3.5.2",
     "webpack-merge": "^4.1.2",
